@@ -1,3 +1,4 @@
+- use pre-rendered preview pieces (2021/04/03 MS)
 - updated some menu hints (2021/04/03 MS)
 - added configure option --with-configdir (2021/04/03 MS) 
 - added ltris.appdata.xml (2021/04/03 SB)
